...
        Auth.auth().signIn(withEmail: email, password: password) { (result, error) in
            self.authView.loginButton.isEnabled = true
            if (result?.user) != nil {
                let vc = TodoListViewController(uuid: (result?.user.uid)!)
                self.navigationController?.pushViewController(vc, animated: true)
            } else {
                self.alert(title: "メッセージ", message: "登録失敗しました")
                
            }
        }
    }
    
    func alert(title:String, message:String) {
...
